refactoring restApiClient